--- a/lang/ar.json
+++ b/lang/ar.json
@@ -12,6 +12,8 @@
     "Academic":"الأكاديمية",
     "Sign up":"تسجيل",
     "Sign in":"تسجيل الدخول",
+    "Logout":"تسجيل الخروج",
+    "Profile":"الملف الشخصي",
     "Contact us":"اتصل بنا",
     "About us":"عن الموقع",
     "Links":"الروابط",
