--- a/lang/ar.json
+++ b/lang/ar.json
@@ -17,6 +17,7 @@
     "Contact us":"اتصل بنا",
     "About us":"عن الموقع",
     "Links":"الروابط",
-    "Send":"ارسال"
+    "Send":"ارسال",
+    "Delete Successfully":"تم حذف بنجاح"
 
 }
